# netbox-plugin-themes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
netbox_themes/: __init__.py  exceptions.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_themes/api/: serializers.py
netbox_themes/migrations/: 0001_initial_netbox_themes.py  0002_alter_theme_base_theme.py  0002_theme_base_theme_alter_theme_css_data.py
netbox_themes/samples/: doom.css
netbox_themes/templates/base/: base.html
netbox_themes/templates/netbox_themes/: theme.html
netbox_themes/templatetags/: template_filters.py
samples/: christmas.css  doom.css  excel.css  greggs.css  pokemon.css  startrek.css  sunrise.css
