[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-plugin-themes"
version = "0.4.1"
authors = [
  { name="Netbox Themes Plugin", email="null@example.com" },
]
description = "A Netbox plugin to customise the look of Netbox using CSS themes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rcrawf/netbox-plugin-themes"
Issues = "https://github.com/rcrawf/netbox-plugin-themes/issues"
